Реализовал тз спринта