@@ -2,71 +2,66 @@ package ru.practicum.shareit.user.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.exceptions.EmailAlreadyExistsException;
 import ru.practicum.shareit.exceptions.NotFoundException;
 import ru.practicum.shareit.user.dto.UserRequestDto;
 import ru.practicum.shareit.user.dto.UserRequestDtoForUpdate;
 import ru.practicum.shareit.user.dto.UserResponseDto;
 import ru.practicum.shareit.user.mapper.UserMapper;
-import ru.practicum.shareit.user.model.UserDao;
-import ru.practicum.shareit.user.repo.UserRepository;
-
+import ru.practicum.shareit.user.model.User;
+import ru.practicum.shareit.user.repoJPA.UserRepoJpa;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-class UserServiceImpl implements UserService {
-    private final UserRepository repository;
+@Transactional(readOnly = true)
+public class UserServiceImpl implements UserService {
+    private final UserRepoJpa repository;
 
     @Override
     public Collection<UserResponseDto> getAllUsers() {
         return repository.findAll().stream()
                 .map(UserMapper::toUserResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
+    @Transactional
     public UserResponseDto saveUser(UserRequestDto userDto) {
-        if (!userDto.getEmail().isEmpty()) {
-            if (repository.existsByEmail(userDto.getEmail())) {
-                throw new EmailAlreadyExistsException("Такой email уже существует");
-            }
-        }
-        UserDao dao = UserMapper.toUserDao(userDto);
-        UserDao saved = repository.save(dao);
-        return UserMapper.toUserResponseDto(saved);
+        User user = UserMapper.toUserDao(userDto);
+        User savedUser = repository.save(user);
+        return UserMapper.toUserResponseDto(savedUser);
     }
 
     @Override
     public UserResponseDto findUserById(Long userId) {
-        return repository.findUserById(userId).map(UserMapper::toUserResponseDto).orElseThrow(() -> new NotFoundException("Такого пользователя не существует"));
+        return repository.findById(userId).map(UserMapper::toUserResponseDto).orElseThrow(() -> new NotFoundException("Такого пользователя не существует"));
     }
 
     @Override
+    @Transactional
     public UserResponseDto updateUser(Long userId, UserRequestDtoForUpdate userRequestDtoForUpdate) {
-        if (repository.findUserById(userId).isEmpty()) {
-            throw new NotFoundException("Такого пользователя не существует");
+        User existingUser = repository.findById(userId)
+                .orElseThrow(() -> new NotFoundException(String.format("Юзер с id: %d не найден", userId)));
+        if (userRequestDtoForUpdate.getName() != null) {
+            existingUser.setName(userRequestDtoForUpdate.getName());
         }
-        if (userRequestDtoForUpdate.getEmail() != null) {
-            if (repository.existsByEmail(userRequestDtoForUpdate.getEmail())) {
-                throw new EmailAlreadyExistsException("Такой email уже существует");
+        if (userRequestDtoForUpdate.getEmail() != null && !userRequestDtoForUpdate.getEmail().equals(existingUser.getEmail())) {
+            if (repository.existsByEmailAndIdNot(userRequestDtoForUpdate.getEmail(), userId)) {
+                throw new EmailAlreadyExistsException("Данный email уже занят");
             }
+            existingUser.setEmail(userRequestDtoForUpdate.getEmail());
         }
-        UserDao userDao = UserMapper.toUserDaoUpdate(userRequestDtoForUpdate);
-        userDao.setId(userId);
-        repository.update(userId, userDao);
-        return UserMapper.toUserResponseDto(userDao);
+        return UserMapper.toUserResponseDto(existingUser);
     }
 
     @Override
     public void deleteUser(Long userId) {
-        if (repository.findUserById(userId).isEmpty()) {
-            throw new NotFoundException("Такого пользователя не существует");
-        } else {
-            repository.delete(userId);
-        }
+        User existingUser = repository.findById(userId)
+                .orElseThrow(() -> new NotFoundException(String.format("Юзер с id: %d не найден", userId)));
+        repository.delete(existingUser);
     }
 
     @Override
